# TalentFlow

./: .env.example  .gitignore  LICENSE  README.md  implementation_plan.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
api/static/: script.js  style.css
api/templates/: index.html
configs/: custom_config.json  default_config.json  minimal_profile.json  no_confidence.json  recruiter_view.json  relaxed_config.json  strict_config.json
docs/: HariTeja_patnalahariteja_Eightfold.md  design.html
sample_inputs/: 12318279_Hari_Teja.txt
sample_inputs/structured/: candidate_api_canonical.json  candidate_ats.json  candidates.csv
sample_inputs/unstructured/: github_profiles.txt  linkedin_profiles.txt  resume_jane_doe.txt
sample_outputs/: custom_config_output.json  default_output.json  minimal_profile.json  no_confidence.json  recruiter_view.json
scratch/: capture_screenshots.py  test_api.py  test_dup.py
src/: __init__.py  cli.py
src/models/: __init__.py  canonical.py  config.py  intermediate.py
src/normalizers/: __init__.py  date.py  location.py  phone.py  skills.py
src/parsers/: __init__.py  base.py  csv_parser.py  github_parser.py  json_parser.py  linkedin_parser.py  resume_parser.py
src/pipeline/: __init__.py  orchestrator.py
src/pipeline/stages/: __init__.py  confidence.py  extraction.py  ingestion.py  merging.py  (+3 more)
src/utils/: constants.py  logger.py
tests/: conftest.py  test_confidence.py  test_edge_cases.py  test_merging.py  test_normalizers.py  test_parsers.py  test_parsers_edge_cases.py  test_pipeline_e2e.py  test_projection.py
