[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eightfold-transformer"
version = "1.0.0"
description = "Candidate profile transformer — turns messy multi-source data into one trustworthy canonical profile."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Hari Teja Patnala", email = "patnalahariteja@gmail.com"},
]
dependencies = [
    "pydantic>=2.5,<3",
    "click>=8.1,<9",
    "phonenumbers>=8.13,<9",
    "pycountry>=23.12",
    "python-dateutil>=2.8,<3",
    "fastapi>=0.100.0",
    "python-multipart>=0.0.6",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-cov>=4.1,<6",
]

[project.scripts]
talentflow = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100  # Enforce 100 character limit
target-version = "py311"
